--- a/coffee_app/pubspec.yaml
+++ b/coffee_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.15.5+3
   cloud_firestore: ^0.13.4+2
+  provider: ^3.2.0
 
 dev_dependencies:
   flutter_test:
